name:                snmp
version:             0.3.0.0
synopsis:            SNMP protocol implementation.
description:         SNMP protocol implementation.
license:             BSD3
license-file:        LICENSE
author:              Alexey Smirnov
maintainer:          Alexey Smirnov <chemistmail@gmail.com>
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/chemist/snmp

library
  exposed-modules: Network.Protocol.Snmp
  -- other-extensions:
  build-depends:       base >=4.6 && <5,
                       asn1-encoding,
                       asn1-types,
                       asn1-parse,
                       bytestring,
                       mtl,
                       containers,
                       binary,
                       cryptohash,
                       cipher-des,
                       crypto-cipher-types,
                       cipher-aes
  hs-source-dirs:      src
  ghc-options: -Wall -O2
  ghc-prof-options: -fprof-auto -fprof-cafs
  default-language:    Haskell2010
