name:                snmp
version:             0.3.0.0
synopsis:            SNMP protocol implementation.
description:         See README.md
license:             BSD3
license-file:        LICENSE
author:              Alexey Smirnov
maintainer:          Alexey Smirnov <chemistmail@gmail.com>
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/chemist/snmp

library
  exposed-modules: Network.Protocol.Snmp
  -- other-extensions:
  build-depends:       base >=4.6 && <5,
                       asn1-encoding,
                       asn1-types,
                       asn1-parse,
                       bytestring,
                       mtl,
                       containers,
                       binary,
                       cereal,
                       cryptonite,
                       memory
  hs-source-dirs:      src
  ghc-options: -Wall -O2
  ghc-prof-options: -fprof-auto -fprof-cafs
  default-language:    Haskell2010

test-suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  ghc-options: -Wall -rtsopts -fno-warn-missing-signatures -fno-enable-rewrite-rules
  build-depends:  base >=4.6 && <5,
                  snmp,
                  QuickCheck,
                  test-framework,
                  test-framework-quickcheck2
         
