name:                snmp
version:             0.3.0.0
synopsis:            SNMP protocol implementation.
description:         See README.md
license:             BSD3
license-file:        LICENSE
author:              Alexey Smirnov
maintainer:          Alexey Smirnov <chemistmail@gmail.com>
category:            Network
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/chemist/snmp

library
  exposed-modules:     Network.Protocol.Snmp
                     , Network.Protocol.Snmp.Construct
                     , Network.Protocol.Snmp.Crypto
                     , Network.Protocol.Snmp.Exception
                     , Network.Protocol.Snmp.Serialize
                     , Network.Protocol.Snmp.Types

  build-depends:       base >=4.6 && <5
                     , bytestring
                     , cereal >= 0.5.0.0
                     , cryptonite
                     , memory
  hs-source-dirs:      src
  ghc-options:
    -Wall
  ghc-prof-options:
    -fprof-auto
    -fprof-cafs
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.6 && <5
                     , snmp
                     , QuickCheck
                     , test-framework
                     , test-framework-quickcheck2
                     , bytestring
                     , cereal
  hs-source-dirs:      tests
  main-is:             Main.hs
  ghc-options:
    -Wall
    -rtsopts
    -fno-warn-missing-signatures
    -fno-warn-orphans

  default-language:    Haskell2010

benchmark bench
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.6 && <5
                     , snmp
                     , criterion
                     , cereal
  hs-source-dirs:      benchmarks
  main-is:             Main.hs
  ghc-options:
    -Wall
    -O2
    -rtsopts
    -fsimpl-tick-factor=150
  default-language:    Haskell2010

